-------
v3.0.15
-------

[mjr] Add ability to return count of objects matching search in place of full
      result set.
[jan] Update Turkish translation (İstanbul Technical University).
[jan] Fix strict searching in favourites driver (Bug #11207).


-------
v3.0.14
-------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[jan] Update Italian translation (Emilien <emilien@wifi.e4a.it>).
[jan] Fix number of contacts in a list that cannot be displayed.
[jan] Update Slovak translation (Marika Schvarczova
      <schvarczova.marika@domeny.sk>).
[jan] Update Czech translation (Michal Foist <michal@foist.cz>).


-------
v3.0.13
-------

[jan] Fix decode_attribute hook when exporting to vCard (kd@tu-cottbus.de, Bug
      #11123).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).
[jan] Only connect to LDAP driver for read/write requests (Dominique Lalot
      <dom.lalot@gmail.com>, Request #11082).
[mjr] Fix bug that caused time shifting of contact birthday and anniversary
      values from ActiveSync devices for users in certain timezones.


-------
v3.0.12
-------

[mjr] Ensure contact lists are always populated with their members (Bug
      #10961).
[jan] Fix SyncML compatibility with work/home phone numbers and newer Funambol
      clients (Bug #10912).
[mjr] Implement more flexible ActiveSync synchronization of names and
      addresses.
[jan] Fix address book sorting in preferences (Bug #10897).
[mms] Improve navigation when editing group entries.


-------
v3.0.11
-------

[jan] Set VOICE parameter when exporting phone numbers to vCard (Request
      #10349).
[jan] Fix importing vCards with empty X-ANNIVERSARY attributes (Bug #10557).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-------
v3.0.10
-------

[mjr] Add the ability to specify the fields to return from contacts/search.
[jan] Fix importing contacts with composite fields.
[jan] Fix LDAP connection test (Bug #10554).